# vrchatdemo

client/: package-lock.json
client/src/: GameEngine.ts  SceneManager.ts
client/src/components/: ConnectionPopup.tsx
client/src/module_bindings/: index.ts  input_kind_type.ts  update_player_movement_reducer.ts  update_player_schedule_table.ts  update_player_schedule_type.ts  update_player_scheduled_reducer.ts
server/: .gitignore  Cargo.toml  build.rs
server/client/src/module_bindings/: db_input_state_type.ts  logged_out_player_table.ts  player_table.ts  player_type.ts  update_player_rotation_reducer.ts
server/src/: input.rs  lib.rs  math.rs  rapier.rs
