[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.0.1"
log = "0.4"
once_cell = "1.21"
rapier3d = "0.24"
nalgebra = "0.33"

[build-dependencies]
gltf = "1.4"
nalgebra = "0.33"
